Bugfix: z-index

--- a/styles/ravaio/theme/stylesheet.css
+++ b/styles/ravaio/theme/stylesheet.css
@@ -370,7 +370,7 @@
     position:absolute;
     right:-200px;
     top:30%;
-    z-index: 15;
+    z-index: 1;
     font-size: 1.5em;
     transition: all 0.5s;
     width:250px;
@@ -379,7 +379,7 @@
     position:absolute;
     right:-200px;
     top:40%;
-    z-index: 15;
+    z-index: 1;
     font-size: 1.5em;
     transition: all 0.5s;
     width:250px;
